This commit provides a temporary hacky fix to the element overflow problem (see github issue 16)

--- a/public/core/css/dashboard.css
+++ b/public/core/css/dashboard.css
@@ -10,6 +10,7 @@
 
 body {
 	background: url("../img/babu-1810144_1920.jpg");
+	background-color: black;
 	width: 100%;
 	height: 100%;
 	background-repeat: no-repeat;
